// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductFeaturesTable component Renders correctly When no features provided 1`] = `
<body>
  <div>
    <div
      class="css-46e850"
    >
      <table
        class="MuiTable-root Table-oddColor Table-noBorder css-wsrw3a-MuiTable-root"
        data-testid="table"
      >
        <tbody
          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        />
      </table>
    </div>
  </div>
</body>
`;

exports[`ProductFeaturesTable component Renders correctly With default row pattern color 1`] = `
<body>
  <div>
    <div
      class="css-46e850"
    >
      <table
        class="MuiTable-root Table-oddColor Table-noBorder css-wsrw3a-MuiTable-root"
        data-testid="table"
      >
        <tbody
          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
            >
              feature-2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
            >
              300
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
            >
              feature1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
            >
              200
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`ProductFeaturesTable component Renders correctly With default row pattern color and with border 1`] = `
<body>
  <div>
    <div
      class="css-46e850"
    >
      <table
        class="MuiTable-root Table-oddColor css-wsrw3a-MuiTable-root"
        data-testid="table"
      >
        <tbody
          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
            >
              feature-2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
            >
              300
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
            >
              feature1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
            >
              200
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`ProductFeaturesTable component Renders correctly With even row pattern color 1`] = `
<body>
  <div>
    <div
      class="css-46e850"
    >
      <table
        class="MuiTable-root Table-evenColor Table-noBorder css-wsrw3a-MuiTable-root"
        data-testid="table"
      >
        <tbody
          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
            >
              feature-2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
            >
              300
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
            >
              feature1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
            >
              200
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;

exports[`ProductFeaturesTable component Renders correctly With header row 1`] = `
<body>
  <div>
    <div
      class="css-46e850"
    >
      <table
        class="MuiTable-root Table-oddColor css-wsrw3a-MuiTable-root"
        data-testid="table"
      >
        <thead
          class="MuiTableHead-root ColorPair-pearl css-tv3lba-MuiTableHead-root"
          data-testid="table-head"
        >
          <div>
            Header Row
          </div>
        </thead>
        <tbody
          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
            >
              feature-2
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
            >
              300
            </td>
          </tr>
          <tr
            class="MuiTableRow-root css-wgfdj2-MuiTableRow-root"
          >
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-1xv4y7i-MuiTableCell-root"
            >
              feature1
            </td>
            <td
              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium css-1y6h75i-MuiTableCell-root"
            >
              200
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;
